--- a/app/templates/seller_request.html
+++ b/app/templates/seller_request.html
@@ -54,7 +54,7 @@
           <div class="row g-4 mt-3">
             <div class="col-md-5">
               <div class="form-group">
-                <label for="manufacturer" class="form-label">Select Manufacturer</label>
+                <label for="manufacturer" class="form-label">Select Supplier</label>
                 <select class="form-select" id="manufacturer" required>
                   <option value="" selected disabled>Choose...</option>
                   {% for manufacturer in manufacturers %}
@@ -68,7 +68,7 @@
             </div>
             <div class="col-md-5">
               <div class="form-group">
-                <label for="product" class="form-label">Select Product (Raw Material)</label>
+                <label for="product" class="form-label">Select Product </label>
                 <select class="form-select" id="product" required>
                   <option value="" selected disabled>Choose manufacturer or processor first...</option>
                 </select>
