--- a/app/templates/manage_companies.html
+++ b/app/templates/manage_companies.html
@@ -85,7 +85,7 @@
                                 <a href="/manage_product/{{ company.company_id }}" class="text-success me-2" title="Products">
                                     <i class="bi bi-basket fs-5 "></i>
                                 </a>
-                            {% elif company.company_industry == "Processor" %}
+                            {% elif company.company_industry == "processor" %}
                             <a href="/manage_product_by_processor/{{ company.company_id }}" class="text-success me-2" title="Products of Processor">
                                 <i class="bi bi-box-seam fs-5"></i>
 
